remove building of package
Signed-off-by: Jannis Ruellmann <jannis.ruellmann@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,31 +50,13 @@ pages:
     paths:
     - public
 
-run:
-  stage: build
-  script:
-    - python --version  # For debugging
-    - pip install virtualenv
-    - virtualenv venv
-    - source venv/bin/activate
-    - pip install -r requirements.txt
-    - python setup.py sdist
-    - python setup.py bdist_wheel
-    # an alternative approach is to install and run:
-    - pip install dist/*.whl
-    # run the command here
-  artifacts:
-    paths:
-      - dist/*.tar.gz
-      - dist/*.whl
-
 # Define jobs
 build-windows:
   stage: build
   tags:
     - shared-windows
     - windows
-    - windows-1809
+    - saas-windows-medium-amd64
   script:
     - Set-Variable -Name "time" -Value (date -Format "%H:%m")
     - echo ${time}
