load & save keys for movement keys and relays
Signed-off-by: Jannis Ruellmann <jannis.ruellmann@gmail.com>

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -2,5 +2,17 @@
 pluto_pico_port = COM6
 
 [CONTROL_CONFIG]
-forward = A
+forward = W
+left = A
+back = S
+right = D
+stop = Space
+r0 = 0
+r1 = 1
+r2 = 2
+r3 = 3
+r4 = 4
+r5 = 5
+r6 = 6
+r7 = 7
 
