allow configuration of all motor parameters
Signed-off-by: Jannis Ruellmann <jannis.ruellmann@gmail.com>

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -3,8 +3,8 @@ pluto_pico_port = COM6
 
 [CONTROL_CONFIG]
 forward = W
-left = A
 back = S
+left = A
 right = D
 stop = Space
 r0 = 0
@@ -15,4 +15,20 @@ r4 = 4
 r5 = 5
 r6 = 6
 r7 = 7
+
+[MOTOR_1_CONFIG]
+max_speed = 8
+accel_step_size = 8
+accel_step_delay = 97
+brake_step_size = 96
+brake_step_delay = 103
+direction = 0
+
+[MOTOR_2_CONFIG]
+max_speed = 16
+accel_step_size = 8
+accel_step_delay = 96
+brake_step_size = 96
+brake_step_delay = 97
+direction = 1
 
