control logic implemented for pluto-pico
Signed-off-by: Jannis Ruellmann <jannis.ruellmann@gmail.com>

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -6,7 +6,7 @@ forward = W
 back = S
 left = A
 right = D
-stop = Space
+handbrake = M
 r0 = 0
 r1 = 1
 r2 = 2
@@ -31,3 +31,4 @@ accel_step_delay = 96
 brake_step_size = 96
 brake_step_delay = 97
 direction = 1
+
