add configuration for sensors

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -50,3 +50,22 @@ threshold = 100
 
 [EM_BTN_CONFIG]
 safety_enabled = 0
+
+[BATTERY_CONFIG]
+b0_safety_enabled = e
+b1_safety_enabled = d
+b2_safety_enabled = d
+b3_safety_enabled = d
+b0_threshold_voltage = 0.23
+b1_threshold_voltage = 0.34
+b2_threshold_voltage = 0.71
+b3_threshold_voltage = 0.72
+
+[TEMP_CONFIG]
+t0_safety_enabled = e
+t1_safety_enabled = d
+t2_safety_enabled = d
+t0_threshold_temp = 69.0
+t1_threshold_temp = 62.0
+t2_threshold_temp = 63.0
+
