add configuration for proximity sensor

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -32,24 +32,19 @@ brake_step_size = 96
 brake_step_delay = 97
 direction = 1
 
-[PROXIMITY_SENSOR_0]
-mode = OFF
-threshold = 100
-
-[PROXIMITY_SENSOR_1]
-mode = OFF
-threshold = 100
-
-[PROXIMITY_SENSOR_2]
-mode = OFF
-threshold = 100
-
-[PROXIMITY_SENSOR_3]
-mode = OFF
-threshold = 100
+[PROXIMITY_CONFIG]
+p0_mode = o
+p0_threshold = 100
+p1_mode = o
+p1_threshold = 99
+p2_mode = o
+p2_threshold = 101
+p3_mode = o
+p3_threshold = 100
 
 [EM_BTN_CONFIG]
 safety_enabled = 0
+cb_embtn_func = 0
 
 [BATTERY_CONFIG]
 b0_safety_enabled = e
