config for pluto

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-pluto_pico_port = COM6
+pluto_pico_port = COM5
 
 [CONTROL_CONFIG]
 forward = W
@@ -17,44 +17,43 @@ r6 = 6
 r7 = 7
 
 [MOTOR_1_CONFIG]
-max_speed = 50
-accel_step_size = 69
-accel_step_delay = 97
-brake_step_size = 96
-brake_step_delay = 103
+max_speed = 70
+accel_step_size = 10
+accel_step_delay = 50
+brake_step_size = 20
+brake_step_delay = 30
 direction = 0
 
 [MOTOR_2_CONFIG]
-max_speed = 69
-accel_step_size = 69
-accel_step_delay = 96
-brake_step_size = 96
-brake_step_delay = 97
+max_speed = 70
+accel_step_size = 10
+accel_step_delay = 50
+brake_step_size = 20
+brake_step_delay = 30
 direction = 1
 
 [PROXIMITY_CONFIG]
 p0_mode = o
-p0_threshold = 100
+p0_threshold = 10
 p1_mode = o
-p1_threshold = 99
+p1_threshold = 10
 p2_mode = o
-p2_threshold = 101
+p2_threshold = 10
 p3_mode = o
-p3_threshold = 100
+p3_threshold = 10
 
 [EM_BTN_CONFIG]
-safety_enabled = 0
-cb_embtn_func = 0
+safety_enabled = 1
 
 [BATTERY_CONFIG]
-b0_safety_enabled = e
+b0_safety_enabled = d
 b1_safety_enabled = d
 b2_safety_enabled = d
 b3_safety_enabled = d
-b0_threshold_voltage = 0.23
-b1_threshold_voltage = 0.34
-b2_threshold_voltage = 0.71
-b3_threshold_voltage = 0.72
+b0_threshold_voltage = 2.8
+b1_threshold_voltage = 2.8
+b2_threshold_voltage = 2.8
+b3_threshold_voltage = 2.8
 
 [TEMP_CONFIG]
 t0_safety_enabled = e
