--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -20,16 +20,16 @@ r7 = 7
 max_speed = 70
 accel_step_size = 10
 accel_step_delay = 50
-brake_step_size = 20
-brake_step_delay = 30
+brake_step_size = 50
+brake_step_delay = 5
 direction = 0
 
 [MOTOR_2_CONFIG]
 max_speed = 70
 accel_step_size = 10
 accel_step_delay = 50
-brake_step_size = 20
-brake_step_delay = 30
+brake_step_size = 50
+brake_step_delay = 5
 direction = 1
 
 [PROXIMITY_CONFIG]
@@ -56,7 +56,7 @@ b2_threshold_voltage = 2.8
 b3_threshold_voltage = 2.8
 
 [TEMP_CONFIG]
-t0_safety_enabled = e
+t0_safety_enabled = d
 t1_safety_enabled = d
 t2_safety_enabled = d
 t0_threshold_temp = 69.0
