ui: disable saving utton. Saving is automatically
Signed-off-by: Jannis Ruellmann <jannis.ruellmann@gmail.com>

--- a/src/pluto_control/pluto_control.conf
+++ b/src/pluto_control/pluto_control.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-pluto_pico_port = COM5
+pluto_pico_port = USB Ports
 
 [CONTROL_CONFIG]
 forward = W
@@ -17,15 +17,15 @@ r6 = 6
 r7 = 7
 
 [MOTOR_1_CONFIG]
-max_speed = 70
+max_speed = 69
 accel_step_size = 10
 accel_step_delay = 50
 brake_step_size = 50
 brake_step_delay = 5
-direction = 0
+direction = 1
 
 [MOTOR_2_CONFIG]
-max_speed = 70
+max_speed = 69
 accel_step_size = 10
 accel_step_delay = 50
 brake_step_size = 50
